Fixed visibility.json loader